--- a/app.css
+++ b/app.css
@@ -19,3 +19,42 @@ body {
 #mainNavbar .nav-link:hover {
   color: #ea1c2c;
 }
+
+#headingGroup span {
+  color: #ea1c2c;
+}
+
+#headingGroup h1 {
+  font-weight: 100;
+  font-size: 4rem;
+}
+
+.content {
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.box h2 {
+  color: #ea1c2c;
+  font-weight: 100;
+  font-size: 2.5rem;
+  line-height: 2;
+}
+
+.box p {
+  color: #f498b8;
+  font-weight: 100;
+  font-size: 1.125rem;
+}
+
+.navbar.scrolled {
+  background: rgb(222, 192, 222);
+  transition: background 500ms;
+}
+
+@media (max-width: 1200px) {
+  #headingGroup h1 {
+    font-weight: 100;
+    font-size: 3rem;
+  }
+}
